Styled homepage (desktop only)

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
             href="/src/assets/pieces/b_king_svg_NoShadow.svg"
         />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Chess</title>
+        <title>Chess Online</title>
     </head>
     <body>
         <div id="root"></div>
